# qmidiroute

./: ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  qmidiroute.desktop
examples/: Makefile.am  aeolus01.qmr
man/: Makefile.am  qmidiroute.1
man/de/: Makefile.am  qmidiroute.1
man/fr/: Makefile.am  qmidiroute.1
src/: Makefile.am  logwidget.cpp  logwidget.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  make_qmidiroute  mapdata.cpp  mapdata.h  mapwidget.cpp  mapwidget.h  midimap.cpp  midimap.h  passwidget.cpp  passwidget.h  qmidiroute.pro  seqdriver.cpp  seqdriver.h
src/pixmaps/: Makefile.am  fileopen.xpm  filesave.xpm  filesaveas.xpm  mapadd.xpm  mapclone.xpm  mapremove.xpm  maprename.xpm  qmidiroute_48.xpm
src/translations/: qmidiroute_de.ts  qmidiroute_fr.ts  qmidiroute_ru.ts
